refactor: 장소 조회 api에서 내가 저장한 장소 및 상대가 저장한 장소 분리